kubernetes/istio/service3/service-3-delay-10s.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service3-delay-10s
spec:
  hosts:
  - service3
  http:
  - route:
    - destination:
        host: service3
        subset: v2
    fault:
      delay:
        percent: 100
        fixedDelay: 10s
