kubernetes/istio/service3/service-3-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service3-destination-rule
spec:
  host: service3
  subsets:
  - name: v2
    labels:
      version: v2
