kubernetes/istio/service3/service-3-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service3-virtual-service
spec:
  hosts:
  - service3
  gateways:
  - virtual-service-gateway
  http:
  - route:
    - destination:
        host: service3
        subset: v2
